exports[`server side render can have two components in the same render tree 1`] = `
Object {
  "loadAllCompletedCalled": 0,
  "loadDataCount": 1,
  "renderCount": 1,
  "renderCount2": 1,
  "renderProps1": Object {
    "isCompleted": false,
    "isError": false,
    "isLoaded": false,
    "isLoading": true,
  },
  "renderProps2": Object {
    "isCompleted": false,
    "isError": false,
    "isLoaded": false,
    "isLoading": true,
  },
}
`;

exports[`server side render does not render on the server if clientLoadOnlySet 1`] = `
Object {
  "loadAllCompletedCalled": 0,
  "loadDataCount": 0,
  "renderCount": 0,
  "renderProps": undefined,
}
`;

exports[`server side render multiple data loaders with same key should not load data multiple times 1`] = `
Object {
  "loadAllCompletedCalled": 0,
  "loadDataCount": 1,
  "renderCount": 1,
  "renderProps": Object {
    "isCompleted": false,
    "isError": false,
    "isLoaded": false,
    "isLoading": true,
  },
}
`;

exports[`server side render second SSR with two components in same tree uses data 1`] = `
Object {
  "loadAllCompletedCalled": 1,
  "loadDataCount": 1,
  "renderCount": 2,
  "renderCount2": 2,
  "renderProps1": Object {
    "actions": Object {
      "refresh": [Function],
    },
    "data": Object {
      "result": "Success!",
    },
    "isCompleted": true,
    "isError": false,
    "isLoaded": true,
    "isLoading": false,
  },
  "renderProps2": Object {
    "actions": Object {
      "refresh": [Function],
    },
    "data": Object {
      "result": "Success!",
    },
    "isCompleted": true,
    "isError": false,
    "isLoaded": true,
    "isLoading": false,
  },
}
`;

exports[`server side render should pass failure when data load fails 1`] = `
Object {
  "loadAllCompletedCalled": 1,
  "loadDataCount": 1,
  "renderCount": 2,
  "renderProps": Object {
    "errorMessage": "Boom!",
    "isCompleted": true,
    "isError": true,
    "isLoaded": false,
    "isLoading": false,
  },
}
`;

exports[`server side render should pass loaded data once promise resolves 1`] = `
Object {
  "loadAllCompletedCalled": 1,
  "loadDataCount": 1,
  "renderCount": 2,
  "renderProps": Object {
    "actions": Object {
      "refresh": [Function],
    },
    "data": Object {
      "result": "Success!",
    },
    "isCompleted": true,
    "isError": false,
    "isLoaded": true,
    "isLoading": false,
  },
}
`;

exports[`server side render should start loading data if not loaded 1`] = `
Object {
  "loadAllCompletedCalled": 0,
  "loadDataCount": 1,
  "renderCount": 1,
  "renderProps": Object {
    "isCompleted": false,
    "isError": false,
    "isLoaded": false,
    "isLoading": true,
  },
}
`;
